deploy/psjr-content-cache/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '20'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '20'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '20'
    prometheus.io/scrape: 'true'
  generation: 1
  name: psjr-content-cache-front
  namespace: marketing
spec:
  rules:
    - host: psjr-content-cache.$DATACENTER.k8s.int.avs.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: psjr-content-cache
                port:
                  number: 80
